# Airplane_Management_System

./: .gitignore  README.md
Project_Implementation/: CMakeLists.txt  main.cpp
Project_Implementation/CLI/include/: AdminInterface.hpp  BookingManagerInterface.hpp  PassengerInterface.hpp  UserInterface.hpp
Project_Implementation/CLI/src/: AdminInterface.cpp  BookingManagerInterface.cpp  PassengerInterface.cpp  UserInterface.cpp
Project_Implementation/Controller/include/: AdminController.hpp  AuthController.hpp  BookingManagerController.hpp  PassengerController.hpp
Project_Implementation/Controller/src/: AdminController.cpp  AuthController.cpp  BookingManagerController.cpp  PassengerController.cpp
Project_Implementation/Database/: aircrafts.json  crew_members.json  users.json
Project_Implementation/Model/include/: Admin.hpp  AircraftModel.hpp  BookingManager.hpp  CashPayment.hpp  CreditPayment.hpp  CrewMemberModel.hpp  FlightModel.hpp  FlightModelBuilder.hpp  Passenger.hpp  PaymentModel.hpp  PaymentStrategy.hpp  PaymentStrategyFactory.hpp  PaypalPayment.hpp  ReservationModel.hpp  ReservationModelBuilder.hpp  UserFactory.hpp  UserModel.hpp
Project_Implementation/Model/src/: Admin.cpp  AircraftModel.cpp  BookingManager.cpp  CashPayment.cpp  CreditPayment.cpp  CrewMemberModel.cpp  FlightModel.cpp  FlightModelBuilder.cpp  Passenger.cpp  PaymentModel.cpp  PaymentStrategyFactory.cpp  PaypalPayment.cpp  ReservationModel.cpp  ReservationModelBuilder.cpp  UserFactory.cpp  UserModel.cpp
Project_Implementation/Repositories/include/: AircraftRepository.hpp  CrewMemberRepository.hpp  FlightRepository.hpp  PaymentRepository.hpp  ReservationRepository.hpp  UserRepository.hpp
Project_Implementation/Repositories/src/: AircraftRepository.cpp  CrewMemberRepository.cpp  FlightRepository.cpp  PaymentRepository.cpp  ReservationRepository.cpp  UserRepository.cpp
Project_Implementation/Services/include/: AircraftService.hpp  CrewMemberService.hpp  FlightService.hpp  PaymentService.hpp  ReservationService.hpp  UserManagementService.hpp
Project_Implementation/Services/src/: AircraftService.cpp  CrewMemberService.cpp  FlightService.cpp  PaymentService.cpp  ReservationService.cpp  UserManagementService.cpp
Project_Implementation/Utils/include/: DatabasePathResolver.hpp  DateTime.hpp  IDGenerator.hpp  JSONManager.hpp
Project_Implementation/Utils/src/: DatabasePathResolver.cpp  DateTime.cpp  IDGenerator.cpp  JSONManager.cpp
